[package]
name = "round_robin"
version = "0.1.3"
authors = ["Savio Santos <saviosa08@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Create a vector of rounds and their respective matches in a tournament, using the Round-robin algorithm."
repository = "https://github.com/savi8sant8s/round_robin"

[dependencies]
